--- a/tranformation/dvdrental/dbt_project.yml
+++ b/tranformation/dvdrental/dbt_project.yml
@@ -18,6 +18,7 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
+#source-paths: ["sources"]
 
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
@@ -33,5 +34,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dvdrental:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    +materialized: table
+    
+
