more than 9 dbt tests added and dimensional model created without rental table

--- a/dw/warehouse/profiles.yml
+++ b/dw/warehouse/profiles.yml
@@ -11,6 +11,6 @@ warehouse:
       role: "ACCOUNTADMIN"
       database: "dw"
       warehouse: "XSMALL_WH"
-      schema: "raw"
+      schema: "staging"
       threads: 12
       client_session_keep_alive: False
